#
# cmake-format: off
# __legal_b__
#
# Copyright (c) 2021-2022 Michel Gillet
# Distributed under the wxWindows Library Licence, Version 3.1.
# (See accompanying file LICENSE_3_1.txt or
# copy at http://www.wxwidgets.org/about/licence)
#
# __legal_e__
# cmake-format: on
#

add_subdirectory(esys/base)
add_subdirectory(esysbaseexe)
